--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -1,4 +1,4 @@
-.form-style{
+/* .form-style{
     display: flex;
 }
 
@@ -37,4 +37,4 @@ p{
 .btn-style:hover {
     color: black;
     font-weight: bolder;
-}
+} */
